Jobsheet 2 & Tugas Machine Learning

--- a/ML_JS2.ipynb
+++ b/ML_JS2.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMfOG5fwK+2d0MjnwtupSrW",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/NadilaAmaliaaa/MACHINE_LEARNING/blob/main/ML_JS2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -59,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -287,7 +275,7 @@
       "metadata": {
         "id": "WhebQvkMr0fO"
       },
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -303,7 +291,7 @@
         "id": "VaDb01BBsFxM",
         "outputId": "dfe6bc41-7bc5-48bc-b087-3e037264376b"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -686,7 +674,7 @@
         "id": "7agrljjSsN3S",
         "outputId": "ab0e1005-fcf8-4f68-faf4-d5333ef03f30"
       },
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -728,7 +716,7 @@
         "id": "tTzAe6FasTt6",
         "outputId": "55277bef-db02-40ee-989c-54f981ba9637"
       },
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -853,7 +841,7 @@
       "metadata": {
         "id": "dVi9pi2isga3"
       },
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -879,7 +867,7 @@
         "id": "wif1hO5ms-xe",
         "outputId": "1e585b9d-2414-4da3-d3c5-cb3cf6c46c26"
       },
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
@@ -1039,7 +1027,7 @@
         "id": "_awsoYXatMJj",
         "outputId": "c36f1f67-c731-4ca4-dd2a-8b2c8ab4a897"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1259,7 +1247,7 @@
         "id": "eLpzlO5mt7sR",
         "outputId": "a9803d16-cade-42a9-8c8e-31e6ab1d0b84"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1644,7 +1632,7 @@
         "id": "M5YvEJDLt9Br",
         "outputId": "86259e56-55fe-4532-9c7a-d885fc0d969a"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1975,7 +1963,7 @@
         "id": "k4DgZiDNup_Q",
         "outputId": "0942a597-3272-4df8-be66-471f00bd361c"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2305,7 +2293,7 @@
         "id": "pUzAoja1uqVx",
         "outputId": "e957fd6d-827f-4793-d48a-7a17ce3da994"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2643,7 +2631,7 @@
         "id": "5ERdB_AWvKRG",
         "outputId": "74eb5667-c56b-423c-f5b5-96b0393dfc7e"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2864,7 +2852,7 @@
         "id": "djm-d_WcvO04",
         "outputId": "b04ef911-f08c-48d8-a108-7a773fd9c6b3"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3209,12 +3197,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "XuwqXMB8vavI",
         "outputId": "10b9b685-3aa4-4e78-f4fa-244d3c782d54"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -3283,7 +3272,7 @@
         "id": "ClNerctSwfee",
         "outputId": "2dde71c0-838f-449e-9184-38b5c4bf57f4"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3621,12 +3610,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "OF5GundVx6-i",
         "outputId": "67cf5517-ee4a-4220-a094-1b90069bfd82"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -3690,7 +3680,7 @@
         "id": "adI-c-Sf0XKy",
         "outputId": "41c5fcec-ea91-410f-ba40-54774f5b2cbc"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4026,12 +4016,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "kRbWwob70eXa",
         "outputId": "c0f1d073-4ec2-46c3-a129-091615f70bf6"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -4278,7 +4269,7 @@
         "id": "6P9JQ5oq1F3H",
         "outputId": "b81fe6bc-2a65-4986-f211-5d33634263f2"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4620,12 +4611,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "giHYMTEC1SDr",
         "outputId": "a868b880-da87-4d96-81be-1b26884f25a5"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -4817,7 +4809,7 @@
         "id": "er4uw3eZG74R",
         "outputId": "1dec76cb-dc71-4b64-f208-1ff578cad41a"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5039,7 +5031,7 @@
         "id": "mAVCxV--1Y9D",
         "outputId": "03b8af2b-ff60-485a-f1a0-3e2192664e42"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5076,12 +5068,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "Vf79ZJgSHeRv",
         "outputId": "74b07f13-f6a9-44c3-e9d7-8d8ee2ac9b43"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
