Tugas Jobsheet 2 Pembelajaran Mesin

--- a/Jobsheet 2 - Ekstraksi Fitur/ML_JS2_Tugas.ipynb
+++ b/Jobsheet 2 - Ekstraksi Fitur/ML_JS2_Tugas.ipynb
@@ -28,7 +28,7 @@
         "id": "n-KwBNzeMIFL",
         "outputId": "7300c1c3-b944-4fba-dca7-901c6892a09f"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -250,7 +250,7 @@
         "id": "uYPYZh7wMW0i",
         "outputId": "2fbaa214-b338-4cde-b91e-b30d9e7ad09c"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -694,7 +694,7 @@
         "id": "lAnzbhU2NAjw",
         "outputId": "3e0eb05c-79d5-40c0-f4e6-70dba6e5a45a"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -754,6 +754,16 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- Menghilangkan kolom \"id\" karena tidak relevan untuk perhitungan prediksi dan kolom \"Unamed:32\" memiliki nilai nol untuk semua baris sehingga tidak memberikan informasi yang berguna.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "aG-nU-LdJCLG"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df_cleaned = df.drop(columns=['id', 'Unnamed: 32'])\n",
@@ -767,7 +777,7 @@
         "id": "uxUfrRILbRQO",
         "outputId": "1787291a-7264-4999-d7d1-4b9da3fd3513"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1212,7 +1222,7 @@
         "id": "0mNCCA_4b00a",
         "outputId": "ea5f0d17-ddbb-4135-d199-5cfab2cc24cc"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1458,7 +1468,7 @@
         "id": "OxmmoKiVcQ3R",
         "outputId": "3198af69-ea55-4b69-f0b5-a07935fbf336"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1916,7 +1926,7 @@
         "id": "vy7EVMXbfe2A",
         "outputId": "08badaa3-0891-4ee2-da17-74d2b28b9df9"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2393,7 +2403,7 @@
         "id": "MuR-rklghE5j",
         "outputId": "b1e45c56-f521-4009-af6b-1e3f082cf402"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
