--- a/Jobsheet 4 - Klasifikasi/ML_JS4.ipynb
+++ b/Jobsheet 4 - Klasifikasi/ML_JS4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO4X9oP6Mp6spMwhCHDGKTB",
+      "authorship_tag": "ABX9TyPUHhHvlHYECKZG9HW1LkvG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1115,7 +1115,7 @@
       "cell_type": "code",
       "source": [
         "from sklearn.datasets import fetch_lfw_people\n",
-        "faces = fetch_lfw_people(min_faces_per_person=60)\n",
+        "faces = fetch_lfw_people(min_faces_per_person=60) #mengambil 60 gambar per-orang\n",
         "print(faces.target_names)\n",
         "print(len(faces.target_names))\n",
         "print(faces.images.shape)"
@@ -1127,7 +1127,7 @@
         },
         "outputId": "072041ec-5bec-4492-ac12-cab09eed0870"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1160,7 +1160,7 @@
         },
         "outputId": "b576b6c2-b57a-4493-99b2-bd02672c0182"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1178,17 +1178,17 @@
       "cell_type": "code",
       "source": [
         "from sklearn.svm import SVC\n",
-        "from sklearn.decomposition import PCA as RandomizedPCA\n",
+        "from sklearn.decomposition import PCA as RandomizedPCA #PCA = Principle Component Analysis = teknik untuk dimentional reduction\n",
         "from sklearn.pipeline import make_pipeline\n",
         "\n",
-        "pca = RandomizedPCA(n_components=150, whiten=True, random_state=42)\n",
+        "pca = RandomizedPCA(n_components=150, whiten=True, random_state=42) #dari 2914 hanya akan diambil 150\n",
         "svc = SVC(kernel='rbf', class_weight='balanced')\n",
-        "model = make_pipeline(pca, svc)"
+        "model = make_pipeline(pca, svc) #set pipeline otomatis jika ada data masuk akan otomatis eksekusi pca + svc"
       ],
       "metadata": {
         "id": "TDhH55K0LLfn"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1202,16 +1202,16 @@
       "metadata": {
         "id": "yxfbM2GcLNZH"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.model_selection import GridSearchCV\n",
-        "param_grid = {'svc__C': [1, 5, 10, 50],\n",
+        "from sklearn.model_selection import GridSearchCV #fungsi untuk mencari parameter terbaik sesuai nilai yg diinput\n",
+        "param_grid = {'svc__C': [1, 5, 10, 50], #toleransi miscalculation\n",
         "              'svc__gamma': [0.0001, 0.0005, 0.001, 0.005]}\n",
-        "grid = GridSearchCV(model, param_grid)\n",
+        "grid = GridSearchCV(model, param_grid) #bisa ditambahkan n_jobs untuk menentukan core cpu yang dipakai\n",
         "\n",
         "%time grid.fit(Xtrain, ytrain)\n",
         "print(grid.best_params_)\n",
@@ -1224,7 +1224,7 @@
         },
         "outputId": "1dc6c255-a01d-426a-ad73-f729a8aa38ac"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1250,13 +1250,13 @@
     {
       "cell_type": "code",
       "source": [
-        "model = grid.best_estimator_\n",
+        "model = grid.best_estimator_ #Membuat model baru dengan parameter terbaik yang sudah dihitung\n",
         "yfit = model.predict(Xtest)"
       ],
       "metadata": {
         "id": "FKv1RK4RMM0R"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1280,7 +1280,7 @@
         },
         "outputId": "66b5cebb-9d51-4d61-ec1a-ec2d97311c22"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1317,7 +1317,7 @@
         },
         "outputId": "14201a83-a5cd-49d1-ca9b-6f228a36ce52"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1364,7 +1364,7 @@
         },
         "outputId": "6a0246de-4f3d-4fc2-beec-485baf6c46a3"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
