Tugas Jobsheet 9 Pertemuan 8

--- a/Jobsheet 9 - Perceptron dan ANN/ML_Tugas_JS9.ipynb
+++ b/Jobsheet 9 - Perceptron dan ANN/ML_Tugas_JS9.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN1RcYlKbolmk4aNM11sbD9",
+      "authorship_tag": "ABX9TyO6j48BVbFIBp0S+yCr3TpL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,12 +29,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Kelompok 3\n",
-        "1. Dhika Wahyu Nugroho / 06 / 2241720056\n",
-        "2. Emir Abiyyu Delanggra / 07 / 2241720197\n",
-        "3. ihza Nurkhafidh Al-Baihaqi / 11 / 2241720165\n",
-        "4. Muhammad Naufal Haidar Setyawan / 17 / 2241720097\n",
-        "5. Nadila Amalia Pribadi / 19 / 2241720114\n",
+        "### Nama: Nadila Amalia Pribadi\n",
+        "### Kelas: TI-3F / 19\n",
+        "### NIM: 2241720114\n",
         "\n",
         "## Tugas Jobsheet 9 Machine Learning"
       ],
